# hyprovo

./: README.ipynb  README.md  setup.cfg
hyprovo/: framework.hy  logger.hy
hyprovo.egg-info/: PKG-INFO  SOURCES.txt
tests/: ancillaries.hy  cases.hy  scratch.ipynb  tests.hy
tests/results/actual/: check.txt  combine-results.txt  deftest-local-defs-with-fixture.txt  deftest-nested-and-check.txt  deftest-partial-local-defs-with-fixture.txt  deftest-variable-local-defs.txt  deftest-with-fixture.txt  deftest.txt  nested-suites-with-nested-fixtures.txt  nested-suites.txt  nested-with-fixture.txt  nested-with-fixtures.txt  report-combined-results.txt  report-result-fail.txt  report-result-pass.txt  suite-check.txt  suite-deftest.txt  suite-nested-deftests.txt  suite-with-fixture-in-deftest.txt  suite-with-fixtures.txt  suite-with-nested-fixture.txt  with-fixture-multiple-statements.txt  with-fixture.txt  with-fixtures.txt
tests/results/expected/: check.txt  combine-results.txt  deftest-local-defs-with-fixture.txt  deftest-nested-and-check.txt  deftest-partial-local-defs-with-fixture.txt  deftest-variable-local-defs.txt  deftest-with-fixture.txt  deftest.txt  nested-suites-with-nested-fixtures.txt  nested-suites.txt  nested-with-fixture.txt  nested-with-fixtures.txt  report-combined-results.txt  report-result-fail.txt  report-result-pass 12.42.46 PM copy.txt  report-result-pass.txt  suite-check.txt  suite-deftest.txt  suite-nested-deftests.txt  suite-with-fixture-in-deftest.txt  suite-with-fixtures.txt  suite-with-nested-fixture.txt  with-fixture-multiple-statements.txt  (+2 more)
