[metadata]
name = hyprovo
description = A minimal unit testing framework in Hy
long_description = file: README.ipynb
author = Prashanth Kumar
author_email = prasxanth.kumar@gmail.com
version = 0.1
keywords =
  unit testing
  Hy
classifiers =
  Topic :: Software Development :: Testing
  Development Status :: 3 - Alpha
  Intended Audience :: Software/Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
license = BSD 3-Clause License
license_files =
  LICENSE

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    hy>=0.20
    xlocal>=0.5

[options.package_data]
hyprovo = *.hy
